# System-Design-and-Scaling

./: LICENSE  README.md  data.csv  pyproject.toml
LLD/: README.md
LLD/Concurrency/: README.md  coordination.py  correctness.py  scarcity.py
Module1/: readme.md
Module1/scaling-system/: .pre-commit-config.yaml  .ruff.toml  .safety-project.ini  LOAD_TESTING.md  LOAD_TEST_SUMMARY.md  PERFORMANCE_ASSESSMENT.md  README.md  check_performance.py  docker-compose.yml  load_test.sh  locustfile.py  pyproject.toml
Module1/scaling-system/app/: Dockerfile  cache.py  main.py
Module1/scaling-system/load_test_reports/: basic_test_20250903_224416_failures.csv  basic_test_20250903_224416_stats.csv  basic_test_20250903_224416_stats_history.csv  basic_test_20250903_230200_stats.csv  basic_test_20250903_230200_stats_history.csv  basic_test_20250910_091021_failures.csv
Module1/scaling-system/scripts/: setup-dev.sh
Module1/scaling-system/tests/: test_app.py  test_system.py
Module2/: README.md  backup_restore.sh  docker-compose.yml  pyproject.toml  requirements.txt  scylla_backup.sh
Module2/app/: db_utils.py  demo_replication.py  demo_sharding.py  mongo_consistency_demo.py
Module2/conf/: pg-primary.conf  pg_hba_replica.conf
Module2/module2_app/: __init__.py  db.py  demo_replication.py  demo_sharding.py  mongo_consistency_demo.py  scylla_demo.py
Module2/scripts/: init-replica.sh
Module3/cdc-pipeline/: README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.sh
Module3/cdc-pipeline/connector/: register_connector.py
Module3/cdc-pipeline/consumer/: kafka_consumer.py
Module3/cdc-pipeline/init-db/: init.sql
Module3/cdc-pipeline/producer/: db_operations.py
models/: classifier.pkl  vectorizer.pkl
month1/scaling-system/: .gitignore  LOAD_TESTING.md  LOAD_TEST_SUMMARY.md  Makefile  PERFORMANCE_TESTING_GUIDE.md  README.md  add_to_extend.txt  check_metrics.sh  docker-compose.yml  load_test.sh  locust.conf  locustfile.py  performance_report_20250910_093448.json  pyproject.toml
month1/scaling-system/.github/workflows/: ci-cd.yml
month1/scaling-system/app/: Dockerfile  cache.py  main.py  models.py  pyproject.toml
month1/scaling-system/img/: config.js
month1/scaling-system/load_test_reports/: basic_test_20250903_224416.html  basic_test_20250903_230200.html  basic_test_20250903_230200_failures.csv  basic_test_20250910_091021.html  basic_test_20250910_091021_stats.csv  basic_test_20250910_091021_stats_history.csv
month1/scaling-system/nginx/: api-gateway.conf  load-balancer.conf
month1/scaling-system/tests/: test_system.py
src/: config.py  jaccard_eval.py  main.py
