[project]
name = "error-free-markdown"
version = "0.1.0"
description = "Error-Free Markdown Table Generation and Evaluation Using Jaccard Similarity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
